<resources>
    <string name="app_name">EShop Buyer</string>

    <!--login-->
    <string name="copyright">西安麦特赛尔软件技术有限公司 版权所有</string>
    <!--erp portal-->
    <string name="sub_system_hr">HR System</string>
    <!-- buyer -->
    <string name="menu_home">首页</string>
    <string name="menu_order">订单</string>
    <string name="menu_shopping_cart">购物车</string>
    <string name="menu_my">我的</string>
    <string name="month_volume">月售&#160;%1$d</string>
    <string name="no_buy_any_goods">未选购商品</string>
    <string name="goods_detail">商品详情</string>
    <string name="goods_detail_sku_quantity">购买数量</string>
    <string name="goods_detail_sku_confirm">确定</string>
    <string name="goods_detail_sku_recommend_price">价格：¥%1$s/%2$s</string>
    <string name="goods_detail_sku_stock">(库存:%1$s)</string>
    <string name="goods_detail_sku_quantity_over">购买数量超出最大库存，请修改购买数量</string>
    <string name="goods_detail_sku_quantity_empty">购买数量不能为空</string>
    <string name="goods_detail_sku_add_succeed">商品添加成功，请前往进货单查看</string>
    <string name="go_settlement">去结算</string>

    <!-- from lib -->
    <string name="login">登录</string>
    <string name="loading">正在加载 ...</string>
    <string name="tip_input_company">请输入公司名称</string>
    <string name="tip_input_account">请输入您的手机号s</string>
    <string name="tip_input_password">请输入您的密码</string>
    <string name="tip_register_password">请输入6位以上密码</string>
    <string name="tip_input_email">请输入您的邮箱</string>
    <string name="tip_input_validation_code">请输入您的验证码</string>
    <string name="logout">退出登录</string>
    <string name="start_price">&#165;%1$.2f 起</string>
    <string name="value_price">&#165;%1$.2f</string>
    <string name="goods_price">&#165;%1$.2f</string>
    <string name="food_lunch">午餐</string>
    <string name="food_home_cooking">家常菜</string>
    <string name="food_porridge_shop">包子粥铺</string>
    <string name="food_japanese_korean_cuisine">日韩料理</string>
    <string name="text_other">其他</string>
    <string name="text_introduction">简介</string>
    <string name="text_goods">商品</string>
    <string name="text_settlement">结算</string>
    <string name="text_all_choose">全选</string>
    <string name="text_to_delivery">待发货</string>
    <string name="text_to_payment">待付款</string>
    <string name="text_to_receive">待收货</string>
    <string name="text_completed">已完成</string>
    <string name="text_user_cancel">用户取消</string>
    <string name="text_timeout_cancel">超时取消</string>
    <string name="order_cancel_alert">订单将在24小时后自动取消</string>
    <string name="text_modify">修改</string>
    <string name="text_to_handle">待处理</string>
    <string name="text_delivered">已配送</string>
</resources>
