<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/buyer_menu_home"
        android:icon="@mipmap/ic_home_normal"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/buyer_menu_order"
        android:icon="@mipmap/ic_order_normal"
        android:title="@string/menu_order" />

    <item
        android:id="@+id/buyer_menu_service"
        android:icon="@mipmap/ic_message_normal"
        android:title="客服" />
    <item
        android:id="@+id/buyer_menu_shopping_cart"
        android:icon="@mipmap/ic_shop_cart_normal"
        android:title="@string/menu_shopping_cart" />

    <item
        android:id="@+id/buyer_menu_my"
        android:icon="@mipmap/ic_my_normal"
        android:title="@string/menu_my" />
</menu>